fixed right alignment

--- a/less/single.less
+++ b/less/single.less
@@ -7,11 +7,13 @@
 
     .alignright {
         padding: 2.3% 0 2.3% 3em;
+        float: right;
     }
 
     .alignleft {
         padding: 2.3% 3em 2.3%em 0;
-        float: right;
+        text-align: center;
+
     }
 
     .entry-header {
